force-app/main/default/objects/sked__Templated_Job_Product__c/sked__Templated_Job_Product__c.object-meta.xml
<CustomObject>
    <label>Templated Job Product</label>
    <nameField>
        <displayFormat>TJP-{0000}</displayFormat>
        <label>Templated Job Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Job Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>