force-app/main/default/objects/sked__Templated_Job_Product__c/fields/sked__Product__c.field-meta.xml
<CustomField>
    <fullName>sked__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Templated Job Products</relationshipLabel>
    <relationshipName>Templated_Job_Products</relationshipName>
    <type>Lookup</type>
</CustomField>