force-app/main/default/objects/sked__Templated_Job_Product__c/fields/sked__Qty__c.field-meta.xml
<CustomField>
    <fullName>sked__Qty__c</fullName>
    <label>Qty</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>