force-app/main/default/objects/sked__Templated_Job_Product__c/fields/sked__Templated_Job__c.field-meta.xml
<CustomField>
    <fullName>sked__Templated_Job__c</fullName>
    <label>Templated Job</label>
    <referenceTo>sked__Templated_Job__c</referenceTo>
    <relationshipLabel>Templated Job Products</relationshipLabel>
    <relationshipName>Templated_Job_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>